<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activity_first_page">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/recycle"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:background="#99CDC2E8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="216dp"
        android:layout_height="39dp"
        android:text="@string/firstPage"
        android:textColor="#3B1C73"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImageView"
        app:layout_constraintVertical_bias="0.755" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="385dp"
        android:layout_height="506dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404">

        <RadioButton
            android:id="@+id/radioButton1"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/option1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description1"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="30dp"
            android:paddingEnd="40dp"
            android:text="@string/description1"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/option2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="30dp"
            android:paddingEnd="40dp"
            android:text="@string/description2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/option3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="30dp"
            android:paddingEnd="40dp"
            android:text="@string/description3"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="49dp"
            android:padding="8dp"
            android:text="@string/option4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:text="@string/description4"
            android:textColor="#000000"
            android:textSize="16sp" />


    </RadioGroup>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="267dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="68dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="1.0" />

</RelativeLayout>

