<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_first_page">
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/recycle"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-16dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#99CDC2E8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="216dp"
        android:layout_height="51dp"
        android:gravity="clip_horizontal|center_horizontal|center_vertical"
        android:text="@string/firstPage"
        android:textColor="#3B1C73"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImageView"
        app:layout_constraintVertical_bias="0.693" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="351dp"
        android:layout_height="426dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348">

        <RadioButton
            android:id="@+id/radioButton1"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/option1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description1"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="30dp"
            android:paddingEnd="40dp"
            android:text="@string/description1"
            android:textColor="#000000"
            android:textSize="12sp" />


        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/option3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="30dp"
            android:paddingEnd="40dp"
            android:text="@string/description3"
            android:textColor="#000000"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            style="@style/CustomRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minHeight="49dp"
            android:padding="8dp"
            android:text="@string/option4"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:text="@string/description4"
            android:textColor="#000000"
            android:textSize="12sp" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>