<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".home">

    <View
        android:id="@+id/view2"
        android:layout_width="410dp"
        android:layout_height="733dp"
        android:background="#99B3A8CD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HOME"
                android:textAlignment="center"
                android:textColor="#311193"
                android:textSize="36sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/show_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/full_name"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/show_mobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/show_mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/show_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/city"

                android:padding="8dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"


                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/report_trash"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corner"

                android:text="@string/REPORT"
                android:textColor="#fff"
                android:textSize="18sp"
                app:cornerRadius="20dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView11"
        android:layout_width="251dp"
        android:layout_height="79dp"
        android:shadowColor="#C62121"
        android:text="@string/homepage"
        android:textAlignment="center"
        android:textColor="#20064E"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <ImageView
        android:layout_width="230dp"
        android:layout_height="152dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/image"
        android:src="@drawable/trash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logout1"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"

        android:background="@drawable/rounded_corner"
        android:text="@string/signup"
        android:textColor="#fff"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>